Add authorize in Swagger UI
