# docs/swagger.json
@@ -114,5 +114,13 @@
                 }
             }
         }
+    },
+    "securityDefinitions": {
+        "InternalTokenAuth": {
+            "description": "Provide token as: Bearer \u003ctoken\u003e",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
     }
 }
